se cambia nombre de botón formulario

--- a/Lab-2/app/www/index.html
+++ b/Lab-2/app/www/index.html
@@ -37,7 +37,7 @@
                 <label class="form-label">Apellido</label>
                 <input type="test" class="form-control" name="apellido">
               </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-primary">Agregar</button>
             </form>
         </div>
     </div>
