--- a/Lab-2/app/www/index.html
+++ b/Lab-2/app/www/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+    <head>
         <title>Aplicaciones de Internet</title>
         <meta charset="utf-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <h1>Aplicaciones de Internet</h1>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>id</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Daniel</td>
-                        <td>Ortiz</td>
-                    </tr>
-                </tbody>
+    <body>
+        <div class="container">
+            <div class="row">
+                <h1>Aplicaciones de Internet</h1>
+                <table class="table table-striped" id="tablaDatos">
+                    <thead>
+                        <tr>
+                            <th>id</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
                 </table>
         </div>
         <div class="row">
