Completado lab 6 y lab 8. Lab 7 en proceso.

--- a/Lab-6/movie.html
+++ b/Lab-6/movie.html
@@ -1,3 +1,6 @@
-<h2>Movie</h2>
-
-<br><br>{{movieid}}
+<div class="movie-details">
+    <h1>{{pelicula.title}}</h1>
+    <p>{{pelicula.year}}</p>
+    <p>{{pelicula.genre}}</p>
+    <p>{{pelicula.length}}</p>
+</div>
