--- a/Lab-6/index.html
+++ b/Lab-6/index.html
@@ -1,55 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="miApp">
+
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Language" content="es" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movies</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
+    <script src="index.js"></script>
 
-<meta chrset="UTF 8">
-<title>Movies</title>
-<link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="index.css" />
 </head>
-<body ng-app="sampleApp">
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
-<script src="lib/bootstrap.js"></script>
+<body ng-controller="miControlador">
+    <h1> Películas</h1>
 
-<h1> Movies</h1>
-<table class="table table-striped">
-<thead>
-<tr> <th>#</th><th>Ejemplo</th><th>Description</th><th></th> </tr> </thead>
-<tbody>
-<tr>
-<td>l</td><td>l</td><td>Movie 1</td>
-<td><a href="#!Movie/1">Movie details</a></td>
-</tr>
-<tr>
-<td>2</td><td>2</td><td>Movie 2</td>
-<td><a href="#!Movie/2">Movie details</a></td>
-</tr>
-<tr>
-<td>3</td><td>3</td><td>Movie 3</td>
-<td><a href="#!Movie/3">Movie details</a></td>
-</tr>
-</tbody>
-</table>
+    <form name="pelicula-form">
+        <label for="genero">Selecciona un género:</label>
+        <select id="genero" name="genero" ng-model="selectedGenre" ng-change="obtenerPeliculas()">
+            <option value="">Todos los géneros</option>
+            <option ng-repeat="genero in generos" value="{{genero.slug}}">{{genero.name}}</option>
+        </select>
+    </form>
 
-<div ng-view></div>
-<script>
-var sampleApp = angular.module('sampleApp',['ngRoute']);
+    <table class="peliculas">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Imagen</th>
+                <th>Detalles</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="pelicula in peliculas">
+                <td>{{pelicula.title}}</td>
+                <td>{{pelicula.description}}</td>
+                <td><img ng-src="{{pelicula.poster.url}}" alt="{{pelicula.title}}" /></td>
+                <td><a href="#/movie/{{pelicula.id}}">Detalles</a></td>
+            </tr>
+        </tbody>
+    </table>
 
-sampleApp.config(
-function($routeProvider){
-$routeProvider.
-when('/Movie/:movieId',{
-templateUrl : 'movie.html',
-controller: 'AngularController'
-})
-});
-
-sampleApp.controller('AngularController',function($scope,$routeParams) {
-
-$scope.movieid=$routeParams.MovieId
-
-});
-</script>
+    <!-- <div ng-view></div> -->
 </body>
+
 </html>
